#!/bin/bash -norc
dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during Tcl installation
dnl	to configure the system for the local environment.
#
# RCS: @(#) $Id: configure.in,v 1.48 2008/11/05 00:13:00 hobbs Exp $

#-----------------------------------------------------------------------
# __CHANGE__
# Set your package name and version numbers here.
#
# This initializes the environment with PACKAGE_NAME and PACKAGE_VERSION
# set as provided.  These will also be added as -D defs in your Makefile
# so you can encode the package version directly into the source files.
#-----------------------------------------------------------------------

AC_INIT([rbc], [0.2])

#--------------------------------------------------------------------
# Call TEA_INIT as the first TEA_ macro to set up initial vars.
# This will define a ${TEA_PLATFORM} variable == "unix" or "windows"
# as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
#--------------------------------------------------------------------

TEA_INIT([3.7])

AC_CONFIG_AUX_DIR(tclconfig)

#--------------------------------------------------------------------
# Load the tclConfig.sh file
#--------------------------------------------------------------------

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

#--------------------------------------------------------------------
# Load the tkConfig.sh file if necessary (Tk extension)
#--------------------------------------------------------------------

TEA_PATH_TKCONFIG
TEA_LOAD_TKCONFIG

#-----------------------------------------------------------------------
# Handle the --prefix=... option by defaulting to what Tcl gave.
# Must be called after TEA_LOAD_TCLCONFIG and before TEA_SETUP_COMPILER.
#-----------------------------------------------------------------------

TEA_PREFIX

#-----------------------------------------------------------------------
# Standard compiler checks.
# This sets up CC by using the CC env var, or looks for gcc otherwise.
# This also calls AC_PROG_CC, AC_PROG_INSTALL and a few others to create
# the basic setup necessary to compile executables.
#-----------------------------------------------------------------------

TEA_SETUP_COMPILER

#-----------------------------------------------------------------------
# __CHANGE__
# Specify the C source files to compile in TEA_ADD_SOURCES,
# public headers that need to be installed in TEA_ADD_HEADERS,
# stub library C source files to compile in TEA_ADD_STUB_SOURCES,
# and runtime Tcl library files in TEA_ADD_TCL_SOURCES.
# This defines PKG(_STUB)_SOURCES, PKG(_STUB)_OBJECTS, PKG_HEADERS
# and PKG_TCL_SOURCES.
#-----------------------------------------------------------------------

TEA_ADD_SOURCES([rbcAlloc.c rbcBind.c rbcBusy.c rbcCanvEps.c rbcChain.c rbcColor.c rbcConfig.c rbcGraph.c rbcGrAxis.c rbcGrBar.c
rbcGrElem.c rbcGrGrid.c rbcGrHairs.c rbcGrLegd.c rbcGrLine.c rbcGrMarker.c rbcGrMisc.c rbcGrPen.c rbcGrPs.c rbcImage.c rbcInt.c
rbcList.c rbcParse.c rbcPs.c rbcSpline.c rbcSwitch.c rbcText.c rbcTile.c rbcUtil.c rbcVecMath.c rbcVecObjCmd.c rbcVector.c
rbcWindow.c rbcWinop.c rbcHtext.c rbcBitmap.c rbcTable.c rbcBgexec.c rbcContainer.c rbcHierbox.c rbcTreeView.c rbcObjConfig.c
rbcPool.c rbcTree.c rbcArrayObj.c rbcTreeViewCmd.c rbcTreeViewColumn.c rbcTreeViewStyle.c rbcTreeCmd.c rbcNsUtil.c rbcTreeViewEdit.c
rbcTabnotebook.c rbcTabset.c rbcDragdrop.c])

TEA_ADD_HEADERS([ generic/rbcBind.h generic/rbcChain.h generic/rbcGrAxis.h generic/rbcGrElem.h generic/rbcGrLegd.h generic/rbcGraph.h
generic/rbcImage.h generic/rbcList.h generic/rbcParse.h generic/rbcPs.h generic/rbcSwitch.h generic/rbcText.h generic/rbcTile.h
generic/rbcTkInt.h generic/rbcWin.h generic/rbcWinConfig.h generic/debug.h generic/rbcTable.h generic/rbcMath.h generic/rbcVector.h
generic/rbcWait.h generic/rbcTree.h generic/rbcTreeView.h generic/rbcObjConfig.h generic/rbcInt.h generic/rbcPool.h generic/rbc.h
generic/rbcNsUtil.h ])
TEA_ADD_INCLUDES([])
TEA_ADD_LIBS([])
TEA_ADD_CFLAGS([])
TEA_ADD_STUB_SOURCES([])
TEA_ADD_TCL_SOURCES([ library/rbcCanvEps.pro library/rbcGraph.pro library/hierbox.tcl library/tabnotebook.tcl library/tabset.tcl
library/tclIndex library/treeview.cur library/treeview_m.xbm library/treeview.tcl library/treeview.xbm library/ZoomStack.itcl
library/dd_protocols/dd-color.tcl library/dd_protocols/dd-file.tcl library/dd_protocols/dd-number.tcl library/dd_protocols/dd-text.tcl
library/dd_protocols/tclIndex library/graph.tcl library/dnd.tcl library/hiertable.tcl library/dragdrop.tcl ])

#--------------------------------------------------------------------
# __CHANGE__
# A few miscellaneous platform-specific items:
#
# Define a special symbol for Windows (BUILD_sample in this case) so
# that we create the export library with the dll.
#
# Windows creates a few extra files that need to be cleaned up.
# You can add more files to clean if your extension creates any extra
# files.
#
# TEA_ADD_* any platform specific compiler/build info here.
#--------------------------------------------------------------------

# Add pkgIndex.tcl if it is generated in the Makefile instead of ./configure
# and change Makefile.in to move it from CONFIG_CLEAN_FILES to BINARIES var.
#CLEANFILES="pkgIndex.tcl"
if test "${TEA_PLATFORM}" = "windows" ; then
    AC_DEFINE(BUILD_RBC, 1, [Build windows export dll])
	AC_DEFINE(WIN32, 1, [Tell rbc to use windows])
    CLEANFILES="$CLEANFILES *.lib *.dll *.exp *.ilk *.pdb vc*.pch"
    TEA_ADD_SOURCES([rbcWinDraw.c rbcWinImage.c rbcWinUtil.c rbcWinPipe.c])
    #TEA_ADD_INCLUDES([-I\"$(${CYGPATH} ${srcdir}/win)\"])
	TEA_ADD_LIBS([-lwinspool -ladvapi32 -lgdi32])
else
    # Ensure no empty else clauses
    :
    TEA_ADD_SOURCES([rbcUnixImage.c rbcUnixPipe.c rbcUnixDnd.c])
    #TEA_ADD_LIBS([-lsuperfly])
fi
AC_SUBST(CLEANFILES)

#--------------------------------------------------------------------
# __CHANGE__
# Choose which headers you need.  Extension authors should try very
# hard to only rely on the Tcl public header files.  Internal headers
# contain private data structures and are subject to change without
# notice.
# This MUST be called after TEA_LOAD_TCLCONFIG / TEA_LOAD_TKCONFIG
#--------------------------------------------------------------------

TEA_PUBLIC_TCL_HEADERS
#TEA_PRIVATE_TCL_HEADERS

TEA_PUBLIC_TK_HEADERS
#TEA_PRIVATE_TK_HEADERS
TEA_PATH_X

# -----------------------------------------------------------------------
#
# Headers:      Check for RBC header files used
#
# -----------------------------------------------------------------------

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME

# >>> from BLT
AC_CHECK_HEADERS(limits.h sys/param.h)
AC_CHECK_HEADERS(string.h ctype.h)
AC_CHECK_HEADERS(errno.h float.h math.h ieeefp.h)
AC_CHECK_HEADERS(sys/time.h waitflags.h sys/wait.h)
AC_CHECK_HEADERS(malloc.h memory.h)
AC_CHECK_HEADERS(setjmp.h)
# <<< from BLT

#debugging
#AC_CHECK_HEADERS([execinfo.h])

# -----------------------------------------------------------------------
#
# Types:        Check for existence of types of size_t and pid_t
#
# -----------------------------------------------------------------------
AC_TYPE_SIZE_T
AC_TYPE_PID_T

AC_MSG_CHECKING([whether union wait is defined correctly])
AC_CACHE_VAL(rbc_cv_struct_wait_works,
    AC_TRY_COMPILE([#include <sys/types.h> 
#include <sys/wait.h>], [
    /*
     *  Check whether <sys/wait.h> defines the type "union wait"
     *  correctly.  It´s needed because of weirdness in HP-UX where
     *  "union wait" is defined in both the BSD and SYS-V  environments.
     *  Checking the usability of WIFEXITED seems to do the trick.
     */
    union wait x;
    WIFEXITED(x);       /* Generates compiler error if WIFEXITED
                         * uses an int. */
],
        [rbc_cv_struct_wait_works="yes"],
        [rbc_cv_struct_wait_works="no"]))

if test "${rbc_cv_struct_wait_works}" = "yes"; then
    AC_DEFINE(HAVE_UNION_WAIT,1,[Define if union wait type is defined incorrectly.])
fi
AC_MSG_RESULT([$rbc_cv_struct_wait_works])

# -----------------------------------------------------------------------
#
# Library Functions:    Check for  strdup, drand48, and srand48.
#
# -----------------------------------------------------------------------

AC_HAVE_FUNCS(strdup strtolower strcasecmp strncasecmp drand48 srand48 finite iffinite isnan)

# -----------------------------------------------------------------------
#
# Types:        Check for jpeg tiff ijl…
#
# -----------------------------------------------------------------------

# AC_SEARCH_LIBS([TIFFReadRGBAImage],[tiff],[AC_CHECK_HEADERS([tiffio.h])])
AC_SEARCH_LIBS([jpeg_read_header],[jpeg],[AC_CHECK_HEADERS([jpeglib.h])])
AC_SEARCH_LIBS([ijlRead],[ijl],[AC_CHECK_HEADERS([ijl.h])])

# -----------------------------------------------------------------------
#
# System services:      X, Tcl, Tk
#
# -----------------------------------------------------------------------
#AC_PATH_XTRA

AC_SEARCH_LIBS([XExtendedMaxRequestSize],[X11])
AC_CHECK_FUNCS([XExtendedMaxRequestSize])

#--------------------------------------------------------------------
# Check whether --enable-threads or --disable-threads was given.
# This auto-enables if Tcl was compiled threaded.
#--------------------------------------------------------------------

TEA_ENABLE_THREADS

#--------------------------------------------------------------------
# The statement below defines a collection of symbols related to
# building as a shared library instead of a static library.
#--------------------------------------------------------------------

TEA_ENABLE_SHARED

#--------------------------------------------------------------------
# This macro figures out what flags to use with the compiler/linker
# when building shared/static debug/optimized objects.  This information
# can be taken from the tclConfig.sh file, but this figures it all out.
#--------------------------------------------------------------------

TEA_CONFIG_CFLAGS

#--------------------------------------------------------------------
# Set the default compiler switches based on the --enable-symbols option.
#--------------------------------------------------------------------

TEA_ENABLE_SYMBOLS

#--------------------------------------------------------------------
# Everyone should be linking against the Tcl stub library.  If you
# can't for some reason, remove this definition.  If you aren't using
# stubs, you also need to modify the SHLIB_LD_LIBS setting below to
# link against the non-stubbed Tcl library.  Add Tk too if necessary.
#--------------------------------------------------------------------

AC_DEFINE(USE_TCL_STUBS, 1, [Use Tcl stubs])
AC_DEFINE(USE_TK_STUBS, 1, [Use Tk stubs])

#--------------------------------------------------------------------
# This macro generates a line to use when building a library.  It
# depends on values set by the TEA_ENABLE_SHARED, TEA_ENABLE_SYMBOLS,
# and TEA_LOAD_TCLCONFIG macros above.
#--------------------------------------------------------------------

TEA_MAKE_LIB

#--------------------------------------------------------------------
# Determine the name of the tclsh and/or wish executables in the
# Tcl and Tk build directories or the location they were installed
# into. These paths are used to support running test cases only,
# the Makefile should not be making use of these paths to generate
# a pkgIndex.tcl file or anything else at extension build time.
#--------------------------------------------------------------------

TEA_PROG_TCLSH
TEA_PROG_WISH

#--------------------------------------------------------------------
# Finally, substitute all of the various values into the Makefile.
# You may alternatively have a special pkgIndex.tcl.in or other files
# which require substituting th AC variables in.  Include these here.
#--------------------------------------------------------------------

AC_OUTPUT([Makefile pkgIndex.tcl])
